Adds Integration Test
